--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 
         </div>
         
-        <script src="js/data.js" async></script>
+        <!--<script src="js/data.js" async></script>-->
         <script src="js/libraries/knockout-3.4.2.js" async></script>
-        <script src="js/viewModel.js" async defer></script>
+        <script src="js/app.js" async defer></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=viewModel.initMap"></script>
 
     </body>
