--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
 
                 <div id="select-zone">
                     <input data-bind="textInput: filter" id="filter-input">
-                    <ul id="list" data-bind="foreach: listArray">
-                        <li data-bind="attr: {id: title}, click: selectPlace"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
+                    <ul id="list" data-bind="foreach: filteredList">
+                        <!-- I tried doing 
+                            data-bind="style: { display: display }" 
+                        but I got an error that display was undefined.-->
+                        <li data-bind="click: selectPlace"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
                     </ul>
                 </div>
             </div>
