--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 
                 <div id="select-zone">
                     <input data-bind="textInput: filter" id="filter-input">
-                    <ul id="list" data-bind="foreach: filteredList">
+                    <ul id="list" data-bind="foreach: listArray">
                         <!-- I tried doing 
                             data-bind="style: { display: display }" 
                         but I got an error that display was undefined.-->
-                        <li data-bind="click: selectPlace"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
+                        <li data-bind="click: selectPlace, css: { highlighted: selected = true }"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
                     </ul>
                 </div>
             </div>
@@ -29,9 +29,12 @@
         </div>
         
         <!--<script src="js/data.js" async></script>-->
-        <script src="js/libraries/knockout-3.4.2.js" async defer></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=initMap"></script>
-        <script src="js/app.js" async defer></script>
 
+        <script src="js/libraries/knockout-3.4.2.js" defer></script>
+        <script src="js/mapstyles.js" defer></script>
+        <script src="js/app.js" defer></script>
+        <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=init"></script>
+
+        
     </body>
 </html>
