--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,9 @@
                             data-bind="style: { display: display }" 
                         but I got an error that display was undefined.-->
                         
-                        <li data-bind="click: selectPlace, css: { highlighted: selected = 'selected' }"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
-<!-- other version:
-                        <li data-bind="click: selectPlace, visible: filteredIn"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
--->
+                        <li data-bind="click: selectPlace, visible: filteredIn, css: { highlighted: selected = 'selected' }"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
+                        <!--data-bind that isn't working --- visible: filteredIn, --> 
+
                     </ul>
                 </div>
             </div>
