--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                 <div id="select-zone">
                     <input data-bind="textInput: filter" id="filter-input" placeholder="Search">
                     <ul id="list" data-bind="foreach: listArray">
-                        <li data-bind="click: selectPlace, visible: filteredIn, css: { highlighted: isSelected }"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
+                        <li data-bind="click: selectPlace.bind($index), visible: filteredIn, css: { highlighted: isSelected }"><span class="title" data-bind="text: title"></span><br><span class="feature" data-bind="text: feature"></span></li>
                     </ul>
                 </div>
             </div>
@@ -26,7 +26,8 @@
         <!--<script src="js/data.js" async></script>-->
         <script src="js/libraries/knockout-3.4.2.js" async defer></script>
         <script src="js/mapstyles.js" async defer></script>
-        <script src="js/app.js" async defer></script>
+        <script src="js/app.js" async defer></script>               <script async defer src="js/libraries/jquery.min.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=init"></script>
+        <script async defer src="js/loadPhotos.js"></script>
     </body>
 </html>
