--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Explore Places in L.A.'s Little Tokyo</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
