feat: Implement error handling for Google Maps API

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,10 @@
             <div id="map"></div>
         </div>
         <!--<script src="js/data.js" async></script>-->
+        <script async defer src="js/libraries/jquery.min.js"></script>
         <script src="js/libraries/knockout-3.4.2.js" async defer></script>
         <script src="js/mapstyles.js" async defer></script>
-        <script src="js/app.js" async defer></script>               <script async defer src="js/libraries/jquery.min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=init"></script>
+        <script src="js/app.js" async defer></script>               
+        <script async defer src="https://maps.googleWRONGapis.com/maps/api/js?key=WRONG-AIzaSyCCaf9Ff3b7aKVQV5_4ej_QSxFKKttpFNw&v=3&callback=init" onerror="errorMsg()"></script>
     </body>
 </html>
